--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-node",
+  "name": "web-app",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "lint": "eslint app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Akshay Gudhate",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.2.1",
